--- a/templates/notes/index.html
+++ b/templates/notes/index.html
@@ -9,5 +9,10 @@
          {{ end }}
         {{ end }}
     </ul>
+
+    <p>
+        <a class="btn btn-outline-primary" href="/notes/new" role="button">New note</a>
+    </p>
+
     {{ template "layouts/footer.html" .}}
 {{ end }}
