--- a/templates/notes/new.html
+++ b/templates/notes/new.html
@@ -1,18 +1,14 @@
 {{ define "notes/new.html" }}
 {{ template "layouts/header.html" .}}
-    <form class="row g-3" action="/notes/new" method="post">
+    <form class="row g-3" action="/notes" method="POST">
   <div class="mb-3">
-    <label for="name">Title</label>
-    <input type="email" class="form-control" id="name" aria-describedby="name" placeholder="Enter title">
-    <small id="nameHelp" class="form-text text-muted">Title of the note.</small>
+    <label for="name" class="form-label">Title</label>
+    <input type="text" class="form-control" id="name" aria-describedby="nameHelp" name="name">
+    <small id="nameHelp" class="form-text">Title of the note.</small>
   </div>
   <div class="mb-3">
-    <label for="exampleInputPassword1">Password</label>
-    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-  </div>
-  <div class="form-check">
-    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-    <label class="form-check-label" for="exampleCheck1">Check me out</label>
+    <label for="content">Content</label>
+    <textarea class="form-control" id="content" rows="5" name="content" placeholder="Content"></textarea>
   </div>
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
