sign up and login

--- a/templates/layouts/header.html
+++ b/templates/layouts/header.html
@@ -16,4 +16,10 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 </head>
 <body>
+
+    {{if .alert}}
+        <div class="alert alert-primary" role="alert">
+            {{.alert}}
+        </div>
+    {{end}}
 {{ end  }}
