--- a/templates/home/signup.html
+++ b/templates/home/signup.html
@@ -12,8 +12,8 @@
     <input type="password" class="form-control" id="password" name="password"></input>
   </div>
 <div class="mb-3">
-    <label for="password" class="form-label">Confirm Password</label>
-    <input type="password" class="form-control" id="password" name="password"></input>
+    <label for="confirm_password" class="form-label">Confirm Password</label>
+    <input type="password" class="form-control" id="confirm_password" name="confirm_password"></input>
   </div>
 
   <button type="submit" class="btn btn-primary">Submit</button>
